test/sema/trait_objects/trait_object_ambigous_method_call.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait A {
  fn foo(self: borrowed Self, x: number) {}
}

trait B : A {
  fn foo(self: borrowed Self, x: number) {}
}

fn foo(x: *mut impl B) {
  // CHECK: [[# @LINE + 1 ]]:5: error: ambigous member function reference
  x.foo();
}

fn main() {}
